<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.kjyoung_expenses.MainActivity" >

    <ListView
        android:id="@+id/expensesList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deleteExpensesButton"
        android:layout_above="@+id/submitButton"
        android:scrollbars="vertical" >
    </ListView>

    <Button
        android:id="@+id/addExpenseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_expense" 
        android:onClick="addExpense"/>

    <Button
        android:id="@+id/deleteExpensesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="toggleDelete"
        android:text="@string/delete_expenses" />

    <Button
        android:id="@+id/editClaimButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/expensesList"
        android:layout_centerHorizontal="true"
        android:text="@string/edit" 
        android:onClick="editClaim"/>

	<TextView
	    android:id="@+id/from"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentStart="true"
	    android:layout_marginRight="5dp"
	    android:layout_marginLeft="5dp"
	    android:text="@string/from"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/startDate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/from"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_toEndOf="@id/from"
	    android:layout_toRightOf="@+id/from"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/to"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/startDate"
	    android:layout_toEndOf="@id/startDate"
	    android:layout_toRightOf="@id/startDate"
	    android:layout_marginRight="5dp"
	    android:layout_marginLeft="5dp"
	    android:text="@string/to"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/endDate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/to"
	    android:layout_alignParentEnd="true"
	    android:layout_alignParentRight="true"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_toEndOf="@id/to"
	    android:layout_toRightOf="@+id/to"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/claimName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/startDate"
	    android:layout_centerHorizontal="true"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
		    android:id="@+id/sendButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_above="@+id/claimName"
		    android:text="@string/send" 
		    android:onClick="sendClick"/>
		
		<Button
		    android:id="@+id/submitButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignEnd="@+id/addExpenseButton"
		    android:layout_alignRight="@+id/addExpenseButton"
		    android:layout_alignTop="@+id/sendButton"
		    android:text="@string/submit" 
		    android:onClick="submitClick"/>

</RelativeLayout>