<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cs.kjyoung_expenses.MainActivity" >

    <ListView
        android:id="@+id/expensesList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/returnButton"
        android:layout_above="@+id/sendButton"
        android:scrollbars="vertical" >
    </ListView>

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/accept" 
        android:onClick="acceptClick"/>

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="returnClick"
        android:text="@string/_return" />

	<TextView
	    android:id="@+id/from"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentStart="true"
	    android:layout_marginRight="5dp"
	    android:layout_marginLeft="5dp"
	    android:text="@string/from"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/startDate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/from"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_toEndOf="@id/from"
	    android:layout_toRightOf="@+id/from"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/to"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/startDate"
	    android:layout_toEndOf="@id/startDate"
	    android:layout_toRightOf="@id/startDate"
	    android:layout_marginRight="5dp"
	    android:layout_marginLeft="5dp"
	    android:text="@string/to"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/endDate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/to"
	    android:layout_alignParentEnd="true"
	    android:layout_alignParentRight="true"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_toEndOf="@id/to"
	    android:layout_toRightOf="@+id/to"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<TextView
	    android:id="@+id/claimName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/startDate"
	    android:layout_centerHorizontal="true"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
		    android:id="@+id/sendButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_above="@+id/claimName"
		    android:layout_centerHorizontal="true"
		    android:text="@string/send" />

</RelativeLayout>
